# cooking_book

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Rocket.toml  diesel.toml  justfile  recipes.db  requirements.txt
.cargo/: config.toml
.github/workflows/: ci.yml
cooking/: __init__.py  db.py  db_utils.py  models.py  ui.py
migrations/2024-09-07-202820_create_recipes/: down.sql  up.sql
migrations/2024-09-07-203332_create_ingredients/: down.sql  up.sql
migrations/2024-09-07-205916_create_steps/: down.sql  up.sql
migrations/2024-09-07-210100_create_carts/: down.sql  up.sql
migrations/2024-09-07-210148_create_cart_recipes/: down.sql  up.sql
scripts/: create_recipes.py  recipes.json
src/: db.rs  db_utils.rs  ingredient_parser.rs  lib.rs  main.rs  models.rs  response.rs  schema.rs  script.rs
src/router/: carts.rs  mod.rs  recipes.rs  ssr_pages.rs
static/assets/css/: styles.css  styles.css.map
static/assets/js/: main.js
static/assets/scss/: styles.scss
static/assets/scss/components/: _breakpoints.scss  _header.scss  _recipe.scss  _searchbar.scss
static/assets/scss/layout/: _layout.scss
static/templates/: carts.html.j2  index.html.j2  recipes.html.j2
tests/: carts_test.rs  create_recipes_test.rs  recipes_test.rs  test_simple.py
tests/common/: mod.rs
